# c-simple-template

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.c
cmake/: AddGoogleTest.cmake  CodeCoverage.cmake  DownloadProject.cmake
include/template_demo/: library.h
src/: CMakeLists.txt  library.c
tests/: CMakeLists.txt  test_template_demo.c  test_template_demo.cpp
